# Faculdade-ADS

./: CMakeLists.txt
Linguagem C/exercicio01/: CMakeLists.txt  main.c
Linguagem C/exercicio03/: main.c
Linguagem C/exercicio04/: main.c
Linguagem C/exercicio05/: main.c
Linguagem C/exercicio09/: main.c
Linguagem C/exercicio10/: main.c
Linguagem C/exercicio11/: main.c
Linguagem C/exercicio12/: main.c
Linguagem C/exercicio13/: main.c
Linguagem C/exercicio14/: main.c
Linguagem C/exercicio15/: main.c
Linguagem C/exercicio16/: main.c
Linguagem C/exercicio17/: main.c
Linguagem C/exercicio18/: main.c
Linguagem C/exercicio19/: main.c
Linguagem C/exercicio2/: main.c
Linguagem C/exercicio20/: main.c
Linguagem C/exercicio6/: main.c
Linguagem C/exercicio7/: main.c
Linguagem C/exercicio8/: main.c
