cmake_minimum_required(VERSION 4.1)
project(Faculdade_ADS C)

set(CMAKE_C_STANDARD 11)

add_executable(exercicio1 "Linguagem C/exercicio1/main.c")
add_executable(exercicio2 "Linguagem C/exercicio2/main.c")
add_executable(exercicio3 "Linguagem C/exercicio3/main.c")
add_executable(exercicio4 "Linguagem C/exercicio4/main.c")
add_executable(exercicio5 "Linguagem C/exercicio5/main.c")
