cmake_minimum_required(VERSION 4.1)
project(Faculdade_ADS C)

set(CMAKE_C_STANDARD 11)

add_executable(exercicio1 "Linguagem C/exercicio1/main.c")
add_executable(exercicio2 "Linguagem C/exercicio2/main.c")
add_executable(exercicio3 "Linguagem C/exercicio3/main.c")
add_executable(exercicio4 "Linguagem C/exercicio4/main.c")
add_executable(exercicio5 "Linguagem C/exercicio5/main.c")
add_executable(exercicio6 "Linguagem C/exercicio6/main.c")
add_executable(exercicio7 "Linguagem C/exercicio7/main.c")
add_executable(exercicio8 "Linguagem C/exercicio8/main.c")
add_executable(exercicio9 "Linguagem C/exercicio9/main.c")
add_executable(exercicio10 "Linguagem C/exercicio10/main.c")
