cmake_minimum_required(VERSION 4.1)
project(Faculdade_ADS C)

set(CMAKE_C_STANDARD 11)

add_executable(exercicio1 "Linguagem C/exercicio01/main.c")
add_executable(exercicio2 "Linguagem C/exercicio02/main.c")
add_executable(exercicio3 "Linguagem C/exercicio03/main.c")
add_executable(exercicio4 "Linguagem C/exercicio04/main.c")
add_executable(exercicio5 "Linguagem C/exercicio05/main.c")
add_executable(exercicio6 "Linguagem C/exercicio06/main.c")
add_executable(exercicio7 "Linguagem C/exercicio07/main.c")
add_executable(exercicio8 "Linguagem C/exercicio08/main.c")
add_executable(exercicio9 "Linguagem C/exercicio09/main.c")
add_executable(exercicio10 "Linguagem C/exercicio10/main.c")
add_executable(exercicio11 "Linguagem C/exercicio11/main.c")
